<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/allnews"
        android:orderInCategory="100"
        android:title="@string/allnews"
        app:showAsAction="never" />

    <item
        android:id="@+id/seguiti"
        android:orderInCategory="100"
        android:title="@string/seguiti"
        app:showAsAction="never" />

    <item
        android:id="@+id/ambient"
        android:orderInCategory="100"
        android:title="@string/ambiente"
        app:showAsAction="never" />

    <item
        android:id="@+id/art"
        android:orderInCategory="100"
        android:title="@string/arte"
        app:showAsAction="never" />

    <item
        android:id="@+id/politica"
        android:orderInCategory="100"
        android:title="@string/politica"
        app:showAsAction="never" />

    <item
        android:id="@+id/economia"
        android:orderInCategory="100"
        android:title="@string/economia"
        app:showAsAction="never" />

    <item
        android:id="@+id/tecnologia"
        android:orderInCategory="100"
        android:title="@string/tecnologia"
        app:showAsAction="never" />

    <item
        android:id="@+id/sociologia"
        android:orderInCategory="100"
        android:title="@string/sociologia"
        app:showAsAction="never" />

</menu>
